Email Feign client
