# adidas-subscription-api/src/main/java/com/adidas/subscription/controller/SubscriptionController.java
@@ -18,7 +18,11 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.adidas.subscription.business.EmailBusiness;
 import com.adidas.subscription.business.SubscriptionBusiness;
+import com.adidas.subscription.constant.Helper;
+import com.adidas.subscription.exceptions.EmailFailoverException;
+import com.example.model.EmailRequest;
 import com.example.model.SubscriptionDetailedResponse;
 import com.example.model.SubscriptionRequest;
 import com.example.model.SubscriptionResponse;
@@ -32,34 +36,56 @@ public class SubscriptionController {
 	@Autowired
 	private SubscriptionBusiness subscriptionBusiness;
 
+	@Autowired
+	private EmailBusiness emailBusiness;
+
 	@PostMapping
 	public ResponseEntity<SubscriptionResponse> newSubscription(@RequestBody SubscriptionRequest request) {
 		logger.info("Request recieved as [" + request + "]");
 		SubscriptionResponse response = subscriptionBusiness.newSubscription(request);
+		logger.debug("Recieved subscription response -> " + response);
+		EmailRequest eRequest = Helper.getEmailRequestObject(response);
+		logger.debug("Sender email against request -> " + request);
+		try {
+			if (emailBusiness.sendEmail(eRequest)) {
+				response.emailSent(true);
+				logger.info("email sent successfully...");
+			}
+		} catch (EmailFailoverException e) {
+			logger.info("Exception recieved, Rolling back subscriptions");
+			deleteByEmail(request.getSubscriptionDto().getEmail());
+			throw e;
+		}
+		logger.debug("Response recieved -> " + response);
 		return ResponseEntity.ok().body(response);
 	}
 
 	@GetMapping(URL_SUBSCRIPTION_GET_BY_EMAIL)
 	public ResponseEntity<SubscriptionResponse> getSubscription(@PathVariable("email") String email) {
-		logger.info("Email recieved as [" + email + "]");
+		logger.info("Get subscriptions against email recieved as [" + email + "]");
 		SubscriptionResponse response = subscriptionBusiness.getSubscriptionByEmail(email);
+		logger.debug("Response recieved -> " + response);
 		return ResponseEntity.ok().body(response);
 	}
 
 	@GetMapping(URL_SUBSCRIPTION_GET_ALL)
 	public ResponseEntity<SubscriptionDetailedResponse> getAllSubscription() {
+		logger.info("Getting all subscriptions");
 		SubscriptionDetailedResponse response = subscriptionBusiness.getAllSubscriptions();
+		logger.debug("Response recieved -> " + response);
 		return ResponseEntity.ok().body(response);
 	}
 
 	@DeleteMapping(URL_SUBSCRIPTION_DELETE_BY_EMAIL)
 	public ResponseEntity<Void> deleteByEmail(@PathVariable("email") String email) {
+		logger.info("Delete subscription against email recieved as [" + email + "]");
 		subscriptionBusiness.deleteByEmail(email);
 		return ResponseEntity.ok().build();
 	}
 
 	@DeleteMapping(URL_SUBSCRIPTION_DELETE_ALL)
 	public ResponseEntity<Void> deleteAll() {
+		logger.info("Deleting all subscriptions");
 		subscriptionBusiness.deleteAll();
 		return ResponseEntity.ok().build();
 	}
